@@ -56,6 +56,7 @@ Suggests:
     CoxBoost,
     crs,
     Cubist,
+    deepnet,
     DiceKriging,
     DiceOptim,
     DiscriMiner,
