@@ -134,6 +134,7 @@ S3method(makeRLearner,classif.randomForestSRC)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
+S3method(makeRLearner,classif.saeDNN)
 S3method(makeRLearner,classif.sda)
 S3method(makeRLearner,classif.sparseLDA)
 S3method(makeRLearner,classif.svm)
@@ -280,6 +281,7 @@ S3method(predictLearner,classif.randomForestSRC)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
+S3method(predictLearner,classif.saeDNN)
 S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.sparseLDA)
 S3method(predictLearner,classif.svm)
@@ -474,6 +476,7 @@ S3method(trainLearner,classif.randomForestSRC)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
+S3method(trainLearner,classif.saeDNN)
 S3method(trainLearner,classif.sda)
 S3method(trainLearner,classif.sparseLDA)
 S3method(trainLearner,classif.svm)
